fix(test, output) 당첨 통계 출력 순서 오류 및 불필요한 테스트 삭제